--- a/app/src/main/res/layout/card_row.xml
+++ b/app/src/main/res/layout/card_row.xml
@@ -74,7 +74,7 @@
                        android:id="@+id/locationIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
-                       android:src="@drawable/location_icon"
+                       android:src="@drawable/location_icon_black"
                        />
 
                    <TextView
