--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -122,6 +122,7 @@
         app:backgroundTint="@null">
     </Button>
     <LinearLayout
+        android:id="@+id/signUpLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/signin"
@@ -149,4 +150,13 @@
             android:textStyle="bold"
             />
     </LinearLayout>
+    <TextView
+        android:id="@+id/forgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Forgot Password?"
+        android:textStyle="bold"
+        android:textSize="17dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/signUpLayout"/>
 </RelativeLayout>
